--- a/Ext. Text on Assembly Docs/Test/test/pagescripting/0002 - Add item w Aut. Ext. Texts ... without includes.yml
+++ b/Ext. Text on Assembly Docs/Test/test/pagescripting/0002 - Add item w Aut. Ext. Texts ... without includes.yml
@@ -1,4 +1,4 @@
-name: 0002 - Add to assembly order line for item with Aut. Ext. Texts enabled (with includes)
+name: 0002 - Add to assembly order line for item with Aut. Ext. Texts enabled (without includes)
   and ext. text enable
 description: Test recording
 start:
